Bug fix for column flex-direction on mobile; fix project-links height at 2 lines for desktop

--- a/public/styles.css
+++ b/public/styles.css
@@ -85,6 +85,7 @@ body {
 }
 
 .project-links {
+  height: 36px;
   display: flex;
   justify-content: center;
 }
@@ -125,6 +126,10 @@ body {
 
   #projects {
     flex-direction: column;
+  }
+
+  .project p,
+  .project-links {
     height: fit-content;
   }
 }
